syntax = "proto3";
import "Msg.proto";
import "OpCode.proto";
import "Connection.proto";
import "Auth.proto";
import "Group.proto";
import "Invitation.proto";
import "Friend.proto";
//***********************协议封装***********************//

message Message {
  //头部相关字段编号范围:1～10
  uint64 magic = 1[jstype = JS_STRING]; //魔数 主要用于保证协议安全性,如果magic不匹配直接断掉连接不予处理
  uint32 version = 2; // 版本号
  OpCode op_code = 3; // 消息协议类型，操作码
  uint64 seq = 4[jstype = JS_STRING]; //序列号,主要用于保证Request和Ack,Notify的seq值必须相同，使得发送端可以进行事务匹配处理
  // uint64 payload_length = 5; // 负载长度,用于解包时验证包的有效性完整性、目前使用protobuf无需手动解包，此字段可忽略

  oneof payload {
    // 连接相关11～20
    AuthRequest auth_request = 11;
    AuthAck auth_ack = 12;
    //    Ping ping = 13;
    //    Pong pong = 14;
    //    Disconnect disconnect = 15;

    // 消息相关21～50
    MsgRequest msg_request = 20;
    MsgAck msg_ack = 23;
    QueryUserGroupsRequest query_user_group_request = 21;
    QueryUserGroupsAck query_user_group_ack = 22;
    // 申请加入群聊
    AskFroJoinGroupRequest ask_for_join_group_request = 24;
    // 申请加群回执
    AskForJoinGroupAck ask_for_join_group_ack = 25;
    // 邀请进群
    InvitationJoinGroupRequest invitation_join_group_request = 26;
    // 邀请进群回执
    InvitationJoinGroupAck invitation_join_group_ack = 27;
    // 创建群
    CreateGroupRequest create_group_request = 28;
    // 创建群回执
    CreateGroupAck create_group_ack = 29;
    //------------------------------------------好友及好友邀请---------------------------------------------------

    InvitationRequestRequest invitation_request_request = 1001;
    InvitationRequestAck invitation_request_ack = 1002;
    InvitationAcceptRequest invitation_accept_request = 1003;
    InvitationAcceptAck invitation_accept_ack = 1004;
    InvitationDeclinedRequest invitation_declined_request = 1005;
    InvitationDeclinedAck invitation_declined_ack = 1006;
    InvitationRequest invitation_request = 1007;
    InvitationAck invitation_ack = 1008;
    FriendRequest friend_request = 1009;
    FriendAck friend_ack = 1010;

  }
}
